--- a/api/composer.json
+++ b/api/composer.json
@@ -24,7 +24,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "bootstrap/common.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -55,7 +58,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
-    },
+    },    
     "minimum-stability": "dev",
     "prefer-stable": true
 }
